--- a/templates/exam/admin_add_course.html
+++ b/templates/exam/admin_add_course.html
@@ -32,7 +32,7 @@
     </div>
     
 
-    <button type="submit" class="btn btn-success" style="border-radius:0px;">Add Course Info</button>
+    <button type="submit" class="btn btn-success" style="border: radius 5px;">Add Course Info</button>
   </form>
 <br><br><br>
 {% endblock content %}
