--- a/templates/exam/adminbase.html
+++ b/templates/exam/adminbase.html
@@ -14,7 +14,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: "Gill Sans", sans-serif;;
+      font-family: "Poppins", sans-serif;;
     }
 
     header {
@@ -170,7 +170,7 @@
       <h3>Online Exam</h3>
     </div>
     <div class="right_area">
-      <a href="/logout" class="logout_btn" style="border-radius:0px;"> Logout</a>
+      <a href="/logout" class="logout_btn" style="border-radius:5px;"> Logout</a>
     </div>
   </header>
   <!--header area end-->
