--- a/templates/exam/contactus.html
+++ b/templates/exam/contactus.html
@@ -26,7 +26,7 @@
         <h3>{{ form.as_p }}</h3>
         </p>
         <br>
-        <input type="submit" value="Submit" class='btn btn-primary' style="border-radius: 0%;">
+        <input type="submit" value="Submit" class='btn btn-primary' style="border-radius: 5px;">
       </div>
     </form>
   </center>
