--- a/templates/exam/footer.html
+++ b/templates/exam/footer.html
@@ -15,6 +15,7 @@
       padding: 0px 0px 0px 0px;
       background-color: #212529;
       margin: 0px;
+      border-radius: 5px;
     }
 
     .fa {
