--- a/templates/exam/salary_form.html
+++ b/templates/exam/salary_form.html
@@ -26,7 +26,7 @@
     </div>
     
 
-    <button type="submit" class="btn btn-success" style="border-radius: 0%;">Approve</button>
+    <button type="submit" class="btn btn-success" style="border-radius: 5px;">Approve</button>
   </form>
 <br><br><br>
 {% endblock content %}
