--- a/templates/exam/logout.html
+++ b/templates/exam/logout.html
@@ -2,20 +2,34 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title></title>
   </head>
-  <body>
+  <style>
+    .body-style {
+      background-color: #121212;
+      color: #ffffff;
+      font-weight: bolder;
+      font-family: "Poppins";
+    }
+
+    span {
+      color: #8094ff;
+    }
+  </style>
+  <body class="body-style">
     {% include "exam/navbar.html" %}
-    <br><br><br><br><br>
-<!-- <img src="{% static "image/logout_img.png" %}"  style="width:800px; height:100px; padding-left:400px;"> -->
+    <br /><br /><br /><br /><br />
+    <!-- <img src="{% static "image/logout_img.png" %}"  style="width:800px; height:100px; padding-left:400px;"> -->
 
-<h2 class="text-center">Logged Out Successfully. <br> Thank you for using our system!</h2>
+    <h2 class="text-center">
+      Logged Out <span>Successfully</span> <br />
+      Thank you for using our system!
+    </h2>
 
-<br><br><br><br><br>
-<br><br><br><br><br>
-<br><br>
-{% include "exam/footer.html" %}
-
+    <br /><br /><br /><br /><br />
+    <br /><br /><br /><br /><br />
+    <br /><br />
+    <!-- {% include "exam/footer.html" %} -->
   </body>
 </html>
