--- a/templates/student/studentsignup.html
+++ b/templates/student/studentsignup.html
@@ -65,7 +65,7 @@
       </div>
 
 
-    <button type="submit" class="btn btn-success" style="border-radius: 0%;">Sign Up</button>
+    <button type="submit" class="btn btn-success" style="border-radius: 5px;">Sign Up</button>
   </form>
 </div>
 
