--- a/templates/teacher/teacher_add_exam.html
+++ b/templates/teacher/teacher_add_exam.html
@@ -32,7 +32,7 @@
     </div>
     
 
-    <button type="submit" class="btn btn-success" style="border-radius: 0%;">Submit Info</button>
+    <button type="submit" class="btn btn-success" style="border-radius: 5px;">Submit Info</button>
   </form>
 <br><br><br>
 {% endblock content %}
