--- a/templates/teacher/teacher_add_question.html
+++ b/templates/teacher/teacher_add_question.html
@@ -48,7 +48,7 @@
     </div>
     
 
-    <button type="submit" class="btn btn-success" style="border-radius: 0%;">Submit Question</button>
+    <button type="submit" class="btn btn-success" style="border-radius: 5px;">Submit Question</button>
   </form>
 <br><br><br>
 {% endblock content %}
