changing fonts to poppins

--- a/templates/exam/navbar.html
+++ b/templates/exam/navbar.html
@@ -35,7 +35,18 @@
       #navbarCollapse {
         font-family: "Poppins", sans-serif;
       }
+
+      .bs-example{
+        font-family: "Poppins", sans-serif;
+      }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+  >
   </head>
 
   <body>
