--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  
 
   <style media="screen">
     .jumbotron {
@@ -15,9 +16,16 @@
     .jumbotron h1 {
       text-align: center;
     }
-
+.display-4 , .lead{ 
+  font-family: "Poppins", sans-serif;
+}
   </style>
-
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
 </head>
 
 <body>
@@ -28,7 +36,7 @@
     <h1 class="display-4">Hello Student,</h1>
     <p class="lead">and Welcome to Online Examination System</p>
     <hr class="my-4">
-    <p>Select any of them to access into the system</p>
+    <p class="lead">Select any of them to access into the system</p>
     <p class="lead">
       <a class="btn btn-primary " href="studentsignup" style="border-radius: 0%;" role="button">Create Your Account</a>
       <a class="btn btn-success " href="studentlogin" style="border-radius: 0%;" role="button">Login Now</a>
