changing navbar,student-dashboard,student-click

--- a/templates/exam/navbar.html
+++ b/templates/exam/navbar.html
@@ -39,6 +39,13 @@
       .bs-example{
         font-family: "Poppins", sans-serif;
       }
+      .nav-item{
+        transition: 1s ease-in-out;
+      }
+      .nav-item:hover{
+        color:#576fe8;
+        font-style: normal;
+      }
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
