--- a/templates/student/student_dashboard.html
+++ b/templates/student/student_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'student/studentbase.html' %}
 {% load widget_tweaks %}
-{% block content %}
+<!-- {% block content %} -->
 
 
 <head>
@@ -101,4 +101,4 @@
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
 
-{% endblock content %}
+<!-- {% endblock content %} -->
