--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -5,20 +5,72 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
 
   <style media="screen">
-    .jumbotron {
-      margin-top: 0px;
-      margin-bottom: 0px;
-    }
-
-    .jumbotron h1 {
-      text-align: center;
-    }
 .display-4 , .lead{ 
   font-family: "Poppins", sans-serif;
+  
 }
+
+.lead{
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+    .body-style {
+      font-family: "Poppins", sans-serif;
+      background-color: black;
+      color: #ffffff;
+      font-weight: bolder;
+      font-family: "Poppins";
+    }
+    .btn-first {
+      width: 5rem;
+      text-align: center;
+      padding: 0.35rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: transparent;
+    border-radius: 0.3rem;
+    background-color: rgb(87, 111, 232);
+    transition-property: color, rgb(87, 111, 232);
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
+    color: rgb(0, 0, 0);
+    font-size: 1rem;
+    }
+    .btn-first:hover{
+      border-color: rgb(255, 255, 255);
+    background-color: transparent;
+    color: rgb(255, 255, 255);
+    text-decoration: none;
+    }
+
+    .auth-wrapper {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 8%;
+}
+
+.auth-div {
+  background-color: rgb(27, 27, 27);
+  text-align: center;
+  padding: 2rem 2rem;
+  border-radius: 5px;
+  width: 60rem;
+  height: 25rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+}
+
+  a{
+    text-decoration: none;
+  }
   </style>
 <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -28,23 +80,23 @@
     />
 </head>
 
-<body>
+<body class="body-style">
 
   {% include "exam/navbar.html" %}
   <br><br>
-  <div class="jumbotron" style="margin-bottom:0px;">
+  <div class="auth-wrapper">
+    <div class="auth-div">
     <h1 class="display-4">Hello Student,</h1>
-    <p class="lead">and Welcome to Online Examination System</p>
-    <hr class="my-4">
+    <p class="lead">and Welcome to Online Assessment System</p>
     <p class="lead">Select any of them to access into the system</p>
-    <p class="lead">
-      <a class="btn btn-primary " href="studentsignup" style="border-radius: 0%;" role="button">Create Your Account</a>
-      <a class="btn btn-success " href="studentlogin" style="border-radius: 0%;" role="button">Login Now</a>
+    <p class="lead"> 
+      <a class="btn-first" href="studentsignup"  role="button">Create Your Account</a>
+      <a class="btn-first" href="studentlogin" role="button">Login Now</a>
     </p>
-    <br><br><br><br><br><br>
+    </div>
   </div>
  
-  {% include "exam/footer.html" %}
+  <!-- {% include "exam/footer.html" %} -->
 </body>
 
 </html>
