--- a/templates/exam/admin_add_course.html
+++ b/templates/exam/admin_add_course.html
@@ -1,38 +1,57 @@
-{% extends 'exam/adminbase.html' %}
-{% load widget_tweaks %}
-{% block content %}
+{% extends 'exam/adminbase.html' %} {% load widget_tweaks %} {% block content %}
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-       <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+  />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  a:link {
-        text-decoration: none;
-      }
-    
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link
+    rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+  />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+    rel="stylesheet"
+  />
+
+  <style>
+    a:link {
+      text-decoration: none;
+    }
+    button {
+    }
   </style>
 </head>
-<h2 style="text-align:center;">Add Course</h2>
-<form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
-    {%csrf_token%}
-    <div class="form-group">
-      <label for="course_name">Course Name</label>
-      {% render_field courseForm.course_name class="form-control" placeholder="Example: Software Engineering" %}
+<h2 style="text-align: center; font-family: 'Poppins', sans-serif">
+  Add Course
+</h2>
+<form method="POST" autocomplete="off" style="margin: 100px; margin-top: 0px">
+  {%csrf_token%}
+  <div class="form-group">
+    <label for="course_name">Course Name</label>
+    {% render_field courseForm.course_name class="form-control"
+    placeholder="Example: Software Engineering" %}
 
-      <label for="question_number">Total Question</label>
-      {% render_field courseForm.question_number class="form-control" placeholder="Example: 50" %}
+    <label for="question_number">Total Question</label>
+    {% render_field courseForm.question_number class="form-control"
+    placeholder="Example: 50" %}
 
-      <label for="total_marks">Total Marks</label>
-      {% render_field courseForm.total_marks class="form-control" placeholder="Example: 100" %}
-    </div>
-    
+    <label for="total_marks">Total Marks</label>
+    {% render_field courseForm.total_marks class="form-control"
+    placeholder="Example: 100" %}
+  </div>
 
-    <button type="submit" class="btn btn-success" style="border: radius 5px;">Add Course Info</button>
-  </form>
-<br><br><br>
+  <button type="submit" class="btn btn-success" style="border: radius 5px">
+    Add Course Info
+  </button>
+</form>
+<br /><br /><br />
 {% endblock content %}
