--- a/templates/teacher/teacherclick.html
+++ b/templates/teacher/teacherclick.html
@@ -35,7 +35,7 @@
     </p>
     <br><br><br><br>
   </div>
-  {% include "exam/footer.html" %}
+  {% comment %} {% include "exam/footer.html" %} {% endcomment %}
 </body>
 
 </html>
