--- a/templates/student/studentlogin.html
+++ b/templates/student/studentlogin.html
@@ -138,14 +138,23 @@
   font-size: 3rem;
 }
 input[type="text"],input[type="password"] {
-  width: 100%;
-  padding: 8px 12px;
-  margin: 1rem 0;
+    margin-top:4px;
+    border-style: solid;
+    border-width: 3px;
+    border-color:rgb(87, 111, 232);
+    border-radius: 5px;
+   
+    
+}
+input[type="text"]:focus,input[type="password"]:focus{
+  transition-property: 0 8px 50px 0 rgba(0,0,0,0.5), border;
+  transition-duration: 300ms, 300ms;
+  transition-timing-function: ease, ease;
 }
 
-input[type="text"]:hover,input[type="password"]:hover{
+{% comment %} input[type="text"]:hover,input[type="password"]:hover{
     width: 
-}
+} {% endcomment %}
 input[type="submit"] {
   width: 100%;
   padding: 8px 12px;
@@ -167,7 +176,7 @@ form{
                 <form class="box" method="post">
                     {% csrf_token %}
 
-                    <label for="email" class="form-label" style="color: white; text-align: left; width: 20rem; margin-bottom: 0;">Email</label>
+                    <label for="email" class="form-label" style="color: white; text-align: left; width: 20rem; margin-bottom: 0;">Username</label>
                      {% render_field form.username class="form-control" autoCapitalize="off" autocomplete="off" placeholder="Username" %}
                     <label for="password" class="form-label" style="color: white; text-align: left; width: 20rem; margin-bottom: 0;">Password</label>
                      {% render_field form.password class="form-control" autoCapitalize="off" autocomplete="off" placeholder="Password" %}
