--- a/templates/exam/index.html
+++ b/templates/exam/index.html
@@ -14,7 +14,7 @@
       class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center"
     >
       <div class="container text-center">
-        <h2 class="display-3 text-info">Online Examination System</h2>
+        <h2 class="display-3 text-info">Online Assessment System</h2>
         <p class="display-4 d-none d-sm-block">
           Attend your examinations online!
         </p>
