--- a/templates/exam/navbar.html
+++ b/templates/exam/navbar.html
@@ -63,7 +63,7 @@
         style="background-color: #212529"
       >
         <a style="color: #ffffff; text-decoration: none" href="/"
-          ><font size="5">Online Examination</font><br
+          ><font size="5">Online Assessment</font><br
         /></a>
         <button
           type="button"
