--- a/templates/student/studentlogin.html
+++ b/templates/student/studentlogin.html
@@ -11,78 +11,9 @@
     <meta charset="utf-8">
     <title></title>
     <style media="screen">
-      body {
-    margin: 0;
-    padding: 0;
+      * {
     font-family: "Poppins",sans-serif;
-    background-color: white;
 }
-
-/* .box {
-    width: 500px;
-    padding: 40px;
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    background: rgb(27, 27, 27);
-    border-radius: 15px;
-    text-align: center;
-    transition: 0.25s;
-    margin-top: 100px
-} */
-
-/* .box input[type="text"],
-.box input[type="password"] {
-    border: 0;
-    background: none;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    border: 2px solid #838383;
-    padding: 10px 10px;
-    width: 250px;
-    outline: none;
-    color: white;
-    border-radius: 0px;
-    transition: 0.25s
-}
-
-.box h1 {
-    color: white;
-    
-    font-weight: 500
-}
-
-.box input[type="text"]:focus,
-.box input[type="password"]:focus {
-    width: 300px;
-    border-color:#4caf50;
-}
-
-.box input[type="submit"] {
-    border: 0;
-    background: #4caf50;
-    display: block;
-    margin: 20px auto;
-    text-align: center;
-    padding: 14px 40px;
-    outline: none;
-    color: white;
-    border-radius: 5px;
-    transition: 0.25s;
-    cursor: pointer
-      width: 100%;
-  padding: 8px 12px;
-  margin: 12px 0;
-}
-
-.box input[type="submit"]:hover {
-         border-color: rgb(255, 255, 255);
-    background-color: transparent;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    font-weight: bolder;
-} */
 
 .body-style{
     background-color: black;
@@ -125,7 +56,7 @@
   padding: 3rem 5rem;
   border-radius: 10px;
   width: 40rem;
-  height: 34rem;
+  height: 30rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -152,9 +83,9 @@ input[type="text"]:focus,input[type="password"]:focus{
   transition-timing-function: ease, ease;
 }
 
-{% comment %} input[type="text"]:hover,input[type="password"]:hover{
+input[type="text"]:hover,input[type="password"]:hover{
     width: 
-} {% endcomment %}
+}
 input[type="submit"] {
   width: 100%;
   padding: 8px 12px;
@@ -164,8 +95,6 @@ input[type="submit"] {
 form{
     width: 20rem;
 }
-
-
     </style>
   </head>
   <body class="body-style">
