--- a/templates/student/studentsignup.html
+++ b/templates/student/studentsignup.html
@@ -4,7 +4,9 @@
   <head>
     <meta charset="utf-8">
     <style>
-
+      *{
+          font-family: "Poppins",sans-serif;
+      }
         form{
            margin: 50px; 
           
