--- a/templates/teacher/teacherclick.html
+++ b/templates/teacher/teacherclick.html
@@ -5,35 +5,114 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+  <script>document.documentElement.style.setProperty('--nav-height', document.getElementById("bs-example").offsetHeight);</script>
 
   <style media="screen">
-    .jumbotron {
-      margin-top: 0px;
-      margin-bottom: 0px;
+
+    *{
+      font-family: "Poppins",sans-serif;
+       --nav-height: 0px;
     }
 
-    .jumbotron h1 {
-      text-align: center;
-    }
+     .lead {
+        margin-left: 2rem;
+        margin-right: 2rem;
+      }
+      .body-style {
+        font-family: "Poppins", sans-serif;
+        background-color: black;
+        color: #ffffff;
+        font-weight: bolder;
+        font-family: "Poppins";
+      }
+      .btn-first {
+        width: 10%;
+        text-align: center;
+        padding: 0.35rem;
+        border-style: solid;
+        border-width: 1px;
+        border-color: transparent;
+        border-radius: 0.3rem;
+        background-color: rgb(87, 111, 232);
+        transition-property: color, rgb(87, 111, 232);
+        transition-duration: 250ms, 250ms;
+        transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
+        color: rgb(0, 0, 0);
+        font-size: 1rem;
+      }
+      .btn-first:hover {
+        border-color: rgb(255, 255, 255);
+        background-color: transparent;
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+      }
 
+      .auth-wrapper {
+        height: calc(100% - var(--nav-height));
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 8%;
+      }
+
+      .auth-div {
+        background-color: rgb(27, 27, 27);
+        text-align: center;
+        padding: 2rem 2rem;
+        border-radius: 5px;
+        width: 40rem;
+        height: 25rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+          0 4px 6px -4px rgb(0 0 0 / 0.1);
+      }
+      @media all and (max-width: 650px) {
+        .auth-div{
+          width:100%;
+          height:100%
+        }
+
+        .auth-wrapper {
+          display:grid;
+          place-items:center;height: calc(100vh - var(--nav-height));
+          margin-top: 0%;
+        }
+      }
+      a {
+        text-decoration: none;
+      }
+      button {
+        margin: 1rem;
+      }
+      
   </style>
 
 </head>
 
-<body>
+<body style="background-color: black;">
 
   {% include "exam/navbar.html" %}
-  <br><br>
-  <div class="jumbotron" style="margin-bottom:0px;">
-    <h1 class="display-4">Hello Teacher,</h1>
-    <p class="lead">and Welcome to Online Examination System</p>
-    <hr class="my-4">
-    <p>Select any of them to access into the system</p>
+  <br>
+  <div class="auth-wrapper">
+    <div class="auth-div">
+    <h1 class="display-4" style ="color:white;">Hello Teacher,</h1>
+    <hr style ="background-color:#00BFA8; width:90%;text-align:center;">
+    <p class="lead" style ="color:white;">and Welcome to Online Assessment System</p>
+    <p class="lead"style ="color:white;">Select any of them to access into the system</p>
     <p class="lead">
-      <a class="btn btn-primary" style="border-radius:0px;" href="teachersignup" role="button">Create Your Account</a>
-      <a class="btn btn-success" style="border-radius:0px;" href="teacherlogin" role="button">Login Now</a>
+      <a class="btn-first"  href="teachersignup" role="button">Create Account</a>
+      <a class="btn-first"  href="teacherlogin" role="button">Login Now</a>
     </p>
-    <br><br><br><br>
+  </div>
   </div>
   {% comment %} {% include "exam/footer.html" %} {% endcomment %}
 </body>
