--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -2,6 +2,10 @@
 {% load static %}
 <html lang="en" dir="ltr">
   <head>
+      <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -97,6 +101,9 @@
       button {
         margin: 1rem;
       }
+      .animate__animated.animate__bounce {
+  --animate-duration: 2.2s;
+}
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -109,7 +116,7 @@
   <body class="body-style">
     {% include "exam/navbar.html" %}
     <br />
-    <div class="auth-wrapper">
+    <div class="auth-wrapper  animate__animated animate__bounce">
       <div class="auth-div">
         <h1 class="display-4">Hello Student,</h1>
         <hr style ="background-color:#00BFA8; width:90%;text-align:center;">
