--- a/templates/student/studentsignup.html
+++ b/templates/student/studentsignup.html
@@ -2,6 +2,10 @@
 {% load widget_tweaks %}
 <html lang="en" dir="ltr">
   <head>
+     <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <meta charset="utf-8">
     <style>
       *{
