--- a/templates/exam/admin_dashboard.html
+++ b/templates/exam/admin_dashboard.html
@@ -74,7 +74,7 @@
     <div class="row">
       <div class="col-md-4 col-xl-3">
         <a href="admin-view-student" style="text-decoration: none;color:white;">
-        <div class="card bg-c-pink order-card">
+        <div class="card bg-c-pink order-card" style="border-radius:20px;">
           <div class="card-block">
             <h6 class="m-b-20">Registered Students </h6>
             <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_student}}</span></h2>
@@ -86,7 +86,7 @@
   
       <div class="col-md-4 col-xl-3">
         <a href="admin-view-teacher" style="text-decoration: none;color:white;">
-        <div class="card bg-c-green order-card">
+        <div class="card bg-c-green order-card" style="border-radius:20px;">
           <div class="card-block">
             <h6 class="m-b-20">Total Teachers </h6>
             <h2 class="text-right"><i class="fas fa-chalkboard-teacher f-left"></i><span>{{total_teacher}}</span></h2>
@@ -97,7 +97,7 @@
   
       <div class="col-md-4 col-xl-3">
         <a href="admin-view-course" style="text-decoration: none;color:white;">
-        <div class="card bg-c-blue order-card">
+        <div class="card bg-c-blue order-card" style="border-radius:20px;">
           <div class="card-block">
             <h6 class="m-b-20">Total Courses</h6>
            <h2 class="text-right"><i class="fas fa-book f-left"></i><span>{{total_course}}</span></h2> 
@@ -108,7 +108,7 @@
   
       <div class="col-md-4 col-xl-3">
         <a href="admin-view-question" style="text-decoration: none;color:white;">
-        <div class="card bg-c-yellow order-card">
+        <div class="card bg-c-yellow order-card" style="border-radius:20px;">
           <div class="card-block">
             <h6 class="m-b-20">Available Questions</h6>
             <h2 class="text-right"><i class="fas fa-question-circle f-left"></i><span>{{total_question}}</span></h2>
