added new files

--- a/templates/student/studentlogin.html
+++ b/templates/student/studentlogin.html
@@ -102,10 +102,11 @@ form{
 
     </style>
   </head>
-  <body class="body-style">
+  <body class="body-style" style="background-image: url(D:\projects\onlineAssessment\Untitled@1-1536x764.jpg);">
     {% include "exam/navbar.html" %}
+    <img src="D:\projects\onlineAssessment\Untitled@1-1536x764.jpg" alt="">
     <div class="auth-wrapper ">
-        <div class="auth-div animate__animated animate__fadeInDown animate__delay-1s">
+      <div class="auth-div animate__animated animate__fadeInDown animate__delay-1s">
             <h1 style="font-family: Poppins,sans-serif; color: white;">Student <span style="color:rgb(87, 111, 232) ; margin-top: 2rem;" >Login</span> Form</h1>
                 <form class="box" method="post">
                     {% csrf_token %}
