--- a/templates/student/studentbase.html
+++ b/templates/student/studentbase.html
@@ -37,7 +37,7 @@
       color: #19B3D3;
     }
 
-    .logout_btn {
+    /* .logout_btn {
       padding: 5px;
       background: #ef5350;
       text-decoration: none;
@@ -50,10 +50,30 @@
       color: #fff;
       transition: 0.5s;
 
+    } */
+ .btn-first {
+      text-align: center;
+      padding: 0.35rem;
+    border-style: solid;
+    border-width: 1px;
+    border-color: transparent;
+    border-radius: 0.3rem;
+    background-color: rgb(87, 111, 232);
+    transition-property: color, rgb(87, 111, 232);
+    transition-duration: 250ms, 250ms;
+    transition-timing-function: ease, cubic-bezier(0.645, 0.045, 0.355, 1);
+    color: white;
+    font-weight: 500;
+    font-size: 1rem;
+    float:right;
+     margin-top: -30px;
+      margin-right: 40px;
+      width: 10%;
     }
-
     .logout_btn:hover {
-      background: #c04240;
+      background-color: #2f323a;
+      color: white;
+      font-weight: bold;
     }
 
     .sidebar {
@@ -140,14 +160,14 @@
       height: 100vh;
       transition: 0.5s;
     }
-
     #check:checked~.content {
       margin-left: 60px;
     }
-
     #check {
       display: none;
     }
+
+   
   </style>
 
 
@@ -167,8 +187,8 @@
     <div class="left_area">
       <h3>Online Exam</h3>
     </div>
-    <div class="right_area">
-      <a href="/logout" class="logout_btn" style="border-radius:5px;">Logout</a>
+    <div class="right_area ">
+      <a href="/logout" class="logout_btn btn-first" style="border-radius:5px;">Logout</a>
     </div>
   </header>
   <!--header area end-->
