adding new styles and translateY effect

--- a/templates/exam/index.html
+++ b/templates/exam/index.html
@@ -27,7 +27,7 @@
       }
       .body-style {
         font-family: "Poppins", sans-serif;
-        background-color: black;
+        background-color: #060b27;
         color: #ffffff;
         font-weight: bolder;
         font-family: "Poppins";
@@ -100,9 +100,9 @@
         color: rgb(255, 255, 255);
         text-decoration: none;
       }
-.animate__animated.animate__bounce {
+/* .animate__animated.animate__bounce {
   --animate-duration: 2.2s;
-}
+} */
   </style>
   </head>
 
