--- a/templates/student/student_marks.html
+++ b/templates/student/student_marks.html
@@ -12,16 +12,8 @@
       text-decoration: none;
     }
 
-    /* h6 {
-      text-align: center;
-    } */
-
-    /* .row {
-      margin: 100px;
-    } */
-
-       .body-style{
-    background-color: black;
+  .body-style{
+    background-color: #060b27;
 }
 
   </style>
