--- a/templates/student/studentsignup.html
+++ b/templates/student/studentsignup.html
@@ -12,17 +12,13 @@
           font-family: "Poppins",sans-serif;
       }
         form{
-           margin: 50px; 
-          
+           margin: 50px;           
         }
 
     </style>
   </head>
   <body>
     {% include "exam/navbar.html" %}
- 
-
-
 <br><br><br>
 <div class="container">
   <h3 style="text-align: center;">Student Signup Form</h3>
@@ -77,6 +73,6 @@
 
 
 <br><br>
-{% include "exam/footer.html" %}
+<!-- {% include "exam/footer.html" %} -->
   </body>
 </html>
