--- a/templates/teacher/teacher_dashboard.html
+++ b/templates/teacher/teacher_dashboard.html
@@ -1,6 +1,6 @@
 {% extends 'teacher/teacherbase.html' %}
 {% load widget_tweaks %}
-{% block content %}
+<!-- {% block content %} -->
 
 
 <head>
@@ -22,19 +22,19 @@
       }
   
       .bg-c-blue {
-        background: #04868f;
+        background: #9ef4d9;
       }
   
       .bg-c-green {
-        background:#4C51BF;
+        background:#8aa1f7;
       }
   
       .bg-c-yellow {
-        background: #F56565;
+        background: #e07db9;
       }
   
       .bg-c-gtx {
-        background:#57717d;
+        background:#8aa1f7;
       }
   
   
@@ -66,37 +66,49 @@
       left: 0px;
       right: 0px;
     }
+    .text-right, .total {
+  color:black
+}
+    .body-style{
+    background-color: #060b27;
+}
+
+.card-effect:hover{
+  transform: translateY(-2.1rem);
+}
     </style>
   </head>
 <br><br>
+<body class="body-style">
+  
 
   <div class="container">
     <div class="row">
       
-        <div class="col-md-4 col-xl-4">
-            <div class="card bg-c-gtx order-card">
+        <div class=" col-md-4 col-xl-6 mt-5 rounded" ;">
+            <div class="card-effect card bg-c-gtx order-card">
               <div class="card-block">
-                <h6 class="m-b-20">Registered Students </h6>
+                <h5 class="total m-b-20 mb-4">Registered Students </h5>
                 <h2 class="text-right"><i class="fas fa-user-graduate f-left"></i><span>{{total_student}}</span></h2>
                 
               </div>
             </div>
           </div>
   
-      <div class="col-md-4 col-xl-4">
-        <div class="card bg-c-yellow order-card">
+      <div class=" col-md-4 col-xl-6 mt-5 rounded">
+        <div class="card-effect card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20">Total Courses</h6>
+            <h5 class="total m-b-20 mb-4">Total Courses</h5>
            <h2 class="text-right"><i class="fas fa-book f-left"></i><span>{{total_course}}</span></h2>
             
           </div>
         </div>
       </div>
   
-      <div class="col-md-4 col-xl-4">
-        <div class="card bg-c-blue order-card">
+      <div class="col-md-4 col-xl-6 mt-4 rounded" style="height: 33%; width:100%;">
+        <div class="card-effect card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20">Total Questions</h6>
+            <h5 class="total m-b-20 mb-4">Total Questions</h5>
             <h2 class="text-right"><i class="fas fa-question-circle f-left"></i><span>{{total_question}}</span></h2>
             
           </div>
@@ -109,6 +121,6 @@
 <br><br><br><br><br><br><br><br><br><br>
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+</body>
 
-
-{% endblock content %}
+<!-- {% endblock content %} -->
