--- a/templates/teacher/teacherclick.html
+++ b/templates/teacher/teacherclick.html
@@ -97,15 +97,15 @@
       button {
         margin: 1rem;
       }
-          .animate__animated.animate__bounce {
+          /* .animate__animated.animate__bounce {
   --animate-duration: 2.2s;
-}
+} */
       
   </style>
 
 </head>
 
-<body style="background-color: black;">
+<body style="background-color: #060b27;">
 
   {% include "exam/navbar.html" %}
   <br>
