--- a/templates/exam/logout.html
+++ b/templates/exam/logout.html
@@ -14,7 +14,7 @@
   <style>
     .body-style {
       font-family: "Poppins", sans-serif;
-      background-color: #121212;
+      background-color: #060b27;
       color: #ffffff;
       font-weight: bolder;
       font-family: "Poppins";
