--- a/templates/student/student_exam.html
+++ b/templates/student/student_exam.html
@@ -1,6 +1,6 @@
 {% extends 'student/studentbase.html' %}
-{% block content %}
 {%load static%}
+<!-- {% block content %} -->
 
 <head>
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -21,12 +21,12 @@
     }
 
        .body-style{
-    background-color: #000;
+    background-color: #060b27;
 }
 
  .btn-first {
-      text-align: center;
-      padding: 0.35rem;
+    text-align: center;
+    padding: 0.35rem;
     border-style: solid;
     border-width: 1px;
     border-color: transparent;
@@ -39,9 +39,9 @@
     font-weight: 500;
     font-size: 1rem;
     float:right;
-     margin-top: -30px;
-      margin-right: 40px;
-      width: 10%;
+    margin-top: -30px;
+    margin-right: 40px;
+    width: 10%;
     }
     .logout_btn:hover {
       background-color: #2f323a;
