--- a/templates/student/studentbase.html
+++ b/templates/student/studentbase.html
@@ -14,7 +14,7 @@
     body {
       margin: 0;
       padding: 0;
-      font-family: "Gill Sans", sans-serif;;
+      font-family: "Poppins", sans-serif;
     }
 
     header {
@@ -36,21 +36,6 @@
     .left_area span {
       color: #19B3D3;
     }
-
-    /* .logout_btn {
-      padding: 5px;
-      background: #ef5350;
-      text-decoration: none;
-      float: right;
-      margin-top: -30px;
-      margin-right: 40px;
-      border-radius: 2px;
-      font-size: 15px;
-      font-weight: 600;
-      color: #fff;
-      transition: 0.5s;
-
-    } */
  .btn-first {
       text-align: center;
       padding: 0.35rem;
@@ -188,7 +173,7 @@
       <h3>Online Exam</h3>
     </div>
     <div class="right_area ">
-      <a href="/logout" class="logout_btn btn-first" style="border-radius:5px;">Logout</a>
+      <a href="/logout" class="btn-first" style="border-radius:5px;">Logout</a>
     </div>
   </header>
   <!--header area end-->
@@ -213,10 +198,7 @@
   <div class="content">
     <br><br><br><br><br>
     {% block content %}
-
     {% endblock content %}
-
-
     <br><br><br>
     {% include "exam/footer.html" %}
   </div>
