--- a/templates/student/studentclick.html
+++ b/templates/student/studentclick.html
@@ -34,7 +34,7 @@
       }
       .body-style {
         font-family: "Poppins", sans-serif;
-        background-color: black;
+        background-color: #060b27;
         color: #ffffff;
         font-weight: bolder;
         font-family: "Poppins";
@@ -101,9 +101,9 @@
       button {
         margin: 1rem;
       }
-      .animate__animated.animate__bounce {
+      /* .animate__animated.animate__bounce {
   --animate-duration: 2.2s;
-}
+} */
     </style>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -116,7 +116,7 @@
   <body class="body-style">
     {% include "exam/navbar.html" %}
     <br />
-    <div class="auth-wrapper  animate__animated animate__bounce">
+    <div class="auth-wrapper">
       <div class="auth-div">
         <h1 class="display-4">Hello Student,</h1>
         <hr style ="background-color:#00BFA8; width:90%;text-align:center;">
