--- a/templates/teacher/teacher_question.html
+++ b/templates/teacher/teacher_question.html
@@ -22,15 +22,15 @@
       }
   
       .bg-c-blue {
-        background: #04868f;
+        background: #8aa1f7;
       }
   
       .bg-c-green {
-        background:#4C51BF;
+        background:#9ef4d9;
       }
   
       .bg-c-yellow {
-        background: #F56565;
+        background: #9ef4d9;
       }
   
       .bg-c-pink {
@@ -66,28 +66,39 @@
       left: 0px;
       right: 0px;
     }
+
+        .text-right, .total {
+  color:black
+}
+    .body-style{
+    background-color: #060b27;
+}
+
+.card-effect:hover{
+  transform: translateY(-2.1rem);
+}
     </style>
   </head>
 <br><br>
-
+<body class="body-style">
   <div class="container">
     <div class="row">
-      <div class="col-md-4 col-xl-6">
+      <div class="col-md-4 col-xl-6 mt-5 rounded">
         <a href="teacher-add-question" style="text-decoration: none;color:white;">
-        <div class="card bg-c-blue order-card">
+        <div class="card-effect card bg-c-blue order-card">
           <div class="card-block">
-            <h6 class="m-b-20"> Add Question </h6>
+            <h5 class="total m-b-20 mb-4"> Add Question </h5>
             <h2 class="text-right"><i class="fas fa-plus f-left"></i></h2>
           </div>
         </div>
       </a>
       </div>
   
-      <div class="col-md-4 col-xl-6">
+      <div class="col-md-4 col-xl-6 mt-5 rounded">
         <a href="teacher-view-question" style="text-decoration: none;color:white;">
-        <div class="card bg-c-yellow order-card">
+        <div class="card-effect card bg-c-yellow order-card">
           <div class="card-block">
-            <h6 class="m-b-20">View Questions </h6>
+            <h5 class="total m-b-20 mb-4">View Questions </h5>
             <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
           </div>
         </div>
@@ -105,5 +116,5 @@
 
 <script src="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 
-
-{% endblock content %}
+</body>
+<!-- {% endblock content %} -->
